--- a/README
+++ b/README
@@ -47,8 +47,7 @@ The following tutorial is specific to the terminal enviroment.
 
 Compiling the Source Codes
 
-Before using ARGraphs segmentation codes. We recommend that you use the standard gcc compiler for 
-compilation shown as below (without $):
+Before using ARGraphs segmentation codes. We recommend that you use the standard gcc compiler for compilation shown as below (without $):
 
 $ gcc *.c src/*.c -o ARGraphs –w
 
